<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/mainLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
    <org.msk86.ygoroid.views.newdeckbuilder.DeckBuilderView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/deck_builder">
    </org.msk86.ygoroid.views.newdeckbuilder.DeckBuilderView>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <TextView
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:paddingBottom="3sp"
                android:layout_weight="3"/>
        <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <EditText
                    android:id="@+id/search_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:cursorVisible="false"
                    android:hint="@string/key_word"/>
            <Button android:id="@+id/search_filter_btn" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:text="@string/btn_search_criteria"
                    android:textSize="8sp" android:layout_alignRight="@id/search_text"/>
            <LinearLayout
                    android:id="@+id/buttons"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="6sp"
                    android:paddingTop="3sp"
                    >
                <Button android:id="@+id/open_btn" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text="@string/btn_open"
                        android:textSize="8sp"/>
                <Button android:id="@+id/save_btn" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text="@string/btn_save"
                        android:textSize="8sp"/>
                <Button android:id="@+id/save_as_btn" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:text="@string/btn_save_as"
                        android:textSize="8sp"/>
            </LinearLayout>
            <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:id="@+id/scroll_list"
                        android:layout_below="@id/search_text"
                        android:layout_above="@id/buttons"
                        android:gravity="top">
                <LinearLayout android:id="@+id/card_list"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:orientation="vertical">
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>

