<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center">
    <LinearLayout android:orientation="vertical" android:layout_width="0dip" android:layout_height="fill_parent"
                  android:layout_weight="1">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_type"/>
            <Spinner
                    android:id="@+id/search_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            <Spinner
                    android:id="@+id/search_sub_type"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_race_attr"/>
            <Spinner
                    android:id="@+id/search_race"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            <Spinner
                    android:id="@+id/search_attr"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_level"/>
            <EditText
                    android:id="@+id/search_level"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="0dip" android:layout_height="fill_parent"
                  android:layout_weight="1">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_atk"/>
            <EditText
                    android:id="@+id/search_min_atk"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:digits="0123456789?？"
                    android:imeOptions="actionDone"/>
            <EditText
                    android:id="@+id/search_max_atk"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:digits="0123456789?？"
                    android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_def"/>
            <EditText
                    android:id="@+id/search_min_def"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:digits="0123456789?？"
                    android:imeOptions="actionDone"/>
            <EditText
                    android:id="@+id/search_max_def"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:digits="0123456789?？"
                    android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lbl_effect"/>
            <EditText
                    android:id="@+id/search_effect"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:imeOptions="actionDone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>